--- a/locale/core.yml
+++ b/locale/core.yml
@@ -179,76 +179,76 @@ core:
       confirmation_message: => core.ref.confirmation_email_sent
       confirm_password_placeholder: => core.ref.confirm_password
       dismiss_button: => core.ref.okay
-      incorrect_password_message: The password you entered is incorrect.
+      incorrect_password_message: O contrasinal introducido é incorreto.
       submit_button: => core.ref.save_changes
       title: => core.ref.change_email
 
     # These translations are used in the Change Password modal dialog.
     change_password:
-      send_button: Send Password Reset Email
-      text: Click the button below and check your email for a link to change your password.
+      send_button: Enviar email de cambio de contrasinal
+      text: Preme o botón debaixo e recibirás no teu correo electrónico unha ligazón para cambiar o teu contrasinal.
       title: => core.ref.change_password
 
     # These translations are used by the composer controls.
     composer:
-      close_tooltip: Close
-      exit_full_screen_tooltip: Exit Full Screen
-      full_screen_tooltip: Full Screen
-      minimize_tooltip: Minimize
+      close_tooltip: Fechar
+      exit_full_screen_tooltip: Sair da pantalla completa
+      full_screen_tooltip: Pantalla completa
+      minimize_tooltip: Minimizar
 
     # These translations are used by the composer when starting a discussion.
     composer_discussion:
-      body_placeholder: Write a Post...
-      discard_confirmation: "You have not posted your discussion. Do you wish to discard it?"
-      submit_button: Post Discussion
+      body_placeholder: Escribir unha publicación...
+      discard_confirmation: "A tua discusión non foi publicada. Queres descartala?"
+      submit_button: Publicar discusión
       title: => core.ref.start_a_discussion
-      title_placeholder: Discussion Title
+      title_placeholder: Título da discusión
 
     # These translations are used by the composer when editing a post.
     composer_edit:
-      discard_confirmation: "You have not saved your changes. Do you wish to discard them?"
-      post_link: "Post #{number} in {discussion}"
+      discard_confirmation: "Os cambios non foron gardados. Queres descartalos?"
+      post_link: "Publicación #{number} en {discussion}"
       submit_button: => core.ref.save_changes
 
     # These translations are used by the composer when replying to a discussion.
     composer_reply:
       body_placeholder: => core.ref.write_a_reply
-      discard_confirmation: "You have not posted your reply. Do you wish to discard it?"
-      posted_message: Your reply was posted.
-      submit_button: Post Reply
-      view_button: View
+      discard_confirmation: "A tua resposta non foi publicada. Queres descartala?"
+      posted_message: A tua resposta foi publicada.
+      submit_button: Publicar resposta
+      view_button: Ver
 
     # These translations are used by the discussion control buttons.
     discussion_controls:
-      cannot_reply_button: Can't Reply
-      cannot_reply_text: You don't have permission to reply to this discussion.
+      cannot_reply_button: Non podes responder
+      cannot_reply_text: Non tes permisos para responder a esta publicación.
       delete_button: => core.ref.delete
-      delete_confirmation: "Are you sure you want to delete this discussion?"
+      delete_confirmation: "Estás seguro de querer borrar esta discusión?"
       delete_forever_button: => core.ref.delete_forever
-      log_in_to_reply_button: Log In to Reply
+      log_in_to_reply_button: Accede para responder
       rename_button: => core.ref.rename
       reply_button: => core.ref.reply
       restore_button: => core.ref.restore
 
     # These translations are used in the discussion list.
     discussion_list:
-      empty_text: It looks like there are no discussions here.
+      empty_text: Semella que non hai discusións aqui.
       load_more_button: => core.ref.load_more
-      mark_as_read_tooltip: Mark as Read
-      replied_text: "{username} replied {ago}"
-      started_text: "{username} started {ago}"
+      mark_as_read_tooltip: Marcar como lido
+      replied_text: "{username} respondeu {ago}"
+      started_text: "{username} comezou {ago}"
 
     # These translations are used in the Edit User modal dialog (admin function).
     edit_user:
-      activate_button: Activate User
+      activate_button: Ativar usuario
       email_heading: => core.ref.email
       email_label: => core.ref.email
-      groups_heading: Groups
+      groups_heading: Grupos
       password_heading: => core.ref.password
       password_label: => core.ref.password
-      set_password_label: Set new password
+      set_password_label: Definir novo contrasinal
       submit_button: => core.ref.save_changes
-      title: Edit User
+      title: Editar usuario
       username_heading: => core.ref.username
       username_label: => core.ref.username
 
@@ -256,64 +256,64 @@ core:
     forgot_password:
       dismiss_button: => core.ref.okay
       email_placeholder: => core.ref.email
-      email_sent_message: We've sent you an email containing a link to reset your password. Check your spam folder if you don't receive it within the next minute or two.
-      not_found_message: There is no user registered with that email address.
-      submit_button: Recover Password
-      text: Enter your email address and we will send you a link to reset your password.
-      title: Forgot Password
+      email_sent_message: Foi enviado un email con unha ligazón para redefinir o teu contrainal. Comproba a tua carpeta de spam se non o recibes nun par de minutos.
+      not_found_message: Non hai ningún usuario rexistrado con ese email.
+      submit_button: Recuperar contrasinal
+      text: Introduce o teu enderezo de email e enviarémoste unha ligazón para redefinir o teu contrasinal.
+      title: Contrasinal esquecido
 
     # These translations are used in the header and session dropdown menu.
     header:
-      admin_button: Administration
-      back_to_index_tooltip: Back to discussion list
+      admin_button: Administración
+      back_to_index_tooltip: Voltar á lista de discusións
       log_in_link: => core.ref.log_in
       log_out_button: => core.ref.log_out
-      profile_button: Profile
-      search_placeholder: Search Forum
+      profile_button: Perfil
+      search_placeholder: Buscar no foro
       settings_button: => core.ref.settings
       sign_up_link: => core.ref.sign_up
 
     # These translations are used on the index page, peripheral to the discussion list.
     index:
       all_discussions_link: => core.ref.all_discussions
-      cannot_start_discussion_button: Can't Start Discussion
-      mark_all_as_read_confirmation: "Are you sure you want to mark all discussions as read?"
+      cannot_start_discussion_button: Non podes comezar unha discusión
+      mark_all_as_read_confirmation: "Tes certeza de querer marcar todos como lidos?"
       mark_all_as_read_tooltip: => core.ref.mark_all_as_read
-      refresh_tooltip: Refresh
+      refresh_tooltip: Refrescar
       start_discussion_button: => core.ref.start_a_discussion
 
     # These translations are used by the sorting control above the discussion list.
     index_sort:
-      latest_button: Latest
-      newest_button: Newest
-      oldest_button: Oldest
-      relevance_button: Relevance
+      latest_button: Último
+      newest_button: Novo
+      oldest_button: Vello
+      relevance_button: Relevancia
       top_button: Top
 
     # These translations are used in the Log In modal dialog.
     log_in:
-      forgot_password_link: "Forgot password?"
-      invalid_login_message: Your login details were incorrect.
+      forgot_password_link: "Esqueciche o contrasinal?"
+      invalid_login_message: Os teus datos de acceso son incorretos.
       password_placeholder: => core.ref.password
-      remember_me_label: Remember Me
-      sign_up_text: "Don't have an account? <a>Sign Up</a>"
+      remember_me_label: Lémbrame
+      sign_up_text: "Non tes unha conta? <a>Rexístrate</a>"
       submit_button: => core.ref.log_in
       title: => core.ref.log_in
-      username_or_email_placeholder: Username or Email
+      username_or_email_placeholder: Nome de usuario ou email
 
     # These translations are used by the Notifications dropdown, a.k.a. "the bell".
     notifications:
-      discussion_renamed_text: "{username} changed the title"
-      empty_text: No Notifications
+      discussion_renamed_text: "{username} mudou o título"
+      empty_text: Sen notificacións
       mark_all_as_read_tooltip: => core.ref.mark_all_as_read
       title: => core.ref.notifications
       tooltip: => core.ref.notifications
 
     # These translations are used by tooltips displayed for individual posts.
     post:
-      edited_text: Edited
-      edited_tooltip: "{username} edited {ago}"
-      number_tooltip: "Post #{number}"
+      edited_text: Editado
+      edited_tooltip: "{username} editou {ago}"
+      number_tooltip: "Publicación #{number}"
 
     # These translations are used by the post control buttons.
     post_controls:
@@ -324,10 +324,10 @@ core:
 
     # These translations are used in the scrubber to the right of the post stream.
     post_scrubber:
-      now_link: Now
-      original_post_link: Original Post
-      unread_text: "{count} unread"
-      viewing_text: "{index} of {count} post|{index} of {count} posts"
+      now_link: Agora
+      original_post_link: Publicación orixinal
+      unread_text: "{count} sen ler"
+      viewing_text: "{index} de {count} publicación|{index} de {count} publicacións"
 
     # These translations are displayed between posts in the post stream.
     post_stream:
