--- a/locale/core.yml
+++ b/locale/core.yml
@@ -331,91 +331,91 @@ core:
 
     # These translations are displayed between posts in the post stream.
     post_stream:
-      discussion_renamed_old_tooltip: 'The old title was: "{old}"'
-      discussion_renamed_text: "{username} changed the title to {new}."
+      discussion_renamed_old_tooltip: 'O título anterior era: "{old}"'
+      discussion_renamed_text: "{username} mudou o título a {new}."
       load_more_button: => core.ref.load_more
       reply_placeholder: => core.ref.write_a_reply
-      time_lapsed_text: "{period} later"
+      time_lapsed_text: "{period} despois"
 
     # These translations are used by the rename discussion modal.
     rename_discussion:
-      title: Rename Discussion
+      title: Renomear discusión
       submit_button: => core.ref.rename
 
     # These translations are used by the search results dropdown list.
     search:
-      all_discussions_button: 'Search all discussions for "{query}"'
+      all_discussions_button: 'Buscar "{query}" en todas as discusións'
       discussions_heading: => core.ref.discussions
       users_heading: Users
 
     # These translations are used in the Settings page.
     settings:
-      account_heading: Account
+      account_heading: Conta
       change_email_button: => core.ref.change_email
       change_password_button: => core.ref.change_password
       notifications_heading: => core.ref.notifications
       notify_by_email_heading: => core.ref.email
       notify_by_web_heading: Web
-      notify_discussion_renamed_label: Someone renames a discussion I started
-      privacy_disclose_online_label: Allow others to see when I am online
-      privacy_heading: Privacy
+      notify_discussion_renamed_label: Alguén renomea unha discusión que eu comecei
+      privacy_disclose_online_label: Permitir a outros saber que estou online
+      privacy_heading: Privacidade
       title: => core.ref.settings
 
     # These translations are used in the Sign Up modal dialog.
     sign_up:
       email_placeholder: => core.ref.email
       dismiss_button: => core.ref.okay
-      log_in_text: "Already have an account? <a>Log In</a>"
+      log_in_text: "Xa tes unha conta? <a>Accede</a>"
       password_placeholder: => core.ref.password
       submit_button: => core.ref.sign_up
       title: => core.ref.sign_up
       username_placeholder: => core.ref.username
-      welcome_text: "Welcome, {username}!"
+      welcome_text: "Benvida/o, {username}!"
 
     # These translations are used in the user profile page and profile popup.
     user:
-      avatar_remove_button: Remove
-      avatar_upload_button: Upload
-      avatar_upload_tooltip: Upload a new avatar
-      bio_placeholder: Write something about yourself
+      avatar_remove_button: Eliminar
+      avatar_upload_button: Subir
+      avatar_upload_tooltip: Subir un novo avatar
+      bio_placeholder: Escribe algo sobre ti
       discussions_link: => core.ref.discussions
-      in_discussion_text: "In {discussion}"
-      joined_date_text: "Joined {ago}"
+      in_discussion_text: "En {discussion}"
+      joined_date_text: "Uniuse {ago}"
       online_text: Online
       posts_load_more_button: => core.ref.load_more
-      posts_link: Posts
+      posts_link: Publicacións
       settings_link: => core.ref.settings
 
     # These translations are found on the user profile page (admin function).
     user_controls:
-      button: Controls
+      button: Controis
       delete_button: => core.ref.delete
-      delete_confirmation: "Are you sure you want to delete this user? All of the user's posts will be deleted."
+      delete_confirmation: "Tes a certeza de querer borrar este usuario? Todas as publicacións do usuario serán borradas."
       edit_button: => core.ref.edit
 
     # These translations are used in the alert that is shown when a new user has not confirmed their email address.
     user_email_confirmation:
       alert_message: => core.ref.confirmation_email_sent
-      resend_button: Resend Confirmation Email
-      sent_message: Sent
+      resend_button: Enviar confirmación de email
+      sent_message: Enviado
 
   # Translations in this namespace are used by the forum and admin interfaces.
   lib:
 
     # These translations are displayed as tooltips for discussion badges.
     badge:
-      hidden_tooltip: Hidden
+      hidden_tooltip: Oculto
 
     # These translations are used to modify usernames.
     username:
-      deleted_text: "[deleted]"
+      deleted_text: "[borrado]"
 
     # These translations are displayed as error messages.
     error:
-      generic_message: "Oops! Something went wrong. Please reload the page and try again."
-      not_found_message: The requested resource was not found.
-      permission_denied_message: You do not have permission to do that.
-      rate_limit_exceeded_message: You're going a little too quickly. Please try again in a few seconds.
+      generic_message: "Opa! Algo foi mal. Recarga a páxina e tenta outra vez."
+      not_found_message: O recurso requerido non foi encontrado.
+      permission_denied_message: Non tes permisos para facer iso.
+      rate_limit_exceeded_message: Vas un pouco rápido. Tenta outra vez dentro duns segundos.
 
     # These translations are used as suffixes when abbreviating numbers.
     number_suffix:
@@ -425,22 +425,22 @@ core:
     # These translations are used to punctuate a series of items.
     series:
       glue_text: ", "
-      three_text: "{first}, {second}, and {third}"
-      two_text: "{first} and {second}"
+      three_text: "{first}, {second}, e {third}"
+      two_text: "{first} e {second}"
 
   # Translations in this namespace are used in views other than Flarum's normal JS client.
   views:
 
     # Translations in this namespace are displayed by the basic HTML content loader.
     content:
-      javascript_disabled_message: This site is best viewed in a modern browser with JavaScript enabled.
-      load_error_message: Something went wrong while trying to load the full version of this site.
-      loading_text: Loading...
+      javascript_disabled_message: Esta web funciona mellor nun navegador moderno co Javascript habilitado.
+      load_error_message: Algo foi mal ao tentar cargar a versión completa da web.
+      loading_text: Cargando...
 
     # Translations in this namespace are displayed in the basic HTML discussion view.
     discussion:
       next_page_button: => core.ref.next_page
-      previous_page_button: Previous Page
+      previous_page_button: Páxina anterior
 
     # Translations in this namespace are displayed by the basic HTML discussion index.
     index:
@@ -451,54 +451,54 @@ core:
     reset:
       confirm_password_label: => core.ref.confirm_password
       password_label: => core.ref.password
-      submit_button: Reset Password
+      submit_button: Redefinir contrasinal
       title: => core.ref.reset_your_password
 
   # Translations in this namespace are used in messages output by the API.
   api:
-    invalid_username_message: "The username may only contain letters, numbers, and dashes."
+    invalid_username_message: "O nome de usuario só pode conter letras, números e guións."
 
   # Translations in this namespace are used in emails sent by the forum.
   email:
 
     # These translations are used in emails sent when users register new accounts.
     activate_account:
-      subject: Activate Your New Account
+      subject: Activa a tua nova conta
       body: |
-        Hey {username}!
+        Boas {username}!
 
-        Someone (hopefully you!) has signed up to {forum} with this email address.
+        Alguén (hopefully you!) se rexistrou en {forum} con esta dirección de email.
 
-        If this was you, simply click the following link and your account will be activated:
+        Se fuches ti, simplemente preme a seguinte ligazón e a tua conta será activada:
         {url}
 
-        If you did not sign up, please ignore this email.
+        Se ti non te rexistrache, por favor ignora este email.
 
     # These translations are used in emails sent when users change their email address.
     confirm_email:
-      subject: Confirm Your New Email Address
+      subject: Confirma a tua nova conta de email
       body: |
-        Hey {username}!
+        Boas {username}!
 
-        Someone (hopefully you!) has changed their email address on {forum} to this one.
+        Alguén (esperamos que ti!) mudou o seu enderezo de email en {forum} a este.
 
-        If this was you, simply click the following link and your email will be confirmed:
+        Se fuches ti, simplemente preme a seguinte ligazón e o teu email será confirmado:
         {url}
 
-        If this was not you, please ignore this email.
+        Se non fuches ti, por favor ignora este email.
 
     # These translations are used in emails sent when users ask to reset their passwords.
     reset_password:
       subject: => core.ref.reset_your_password
       body: |
-        Hey {username}!
+        Boas {username}!
 
-        Someone (hopefully you!) has submitted a forgotten password request for your account on {forum}.
+        Alguén (esperamos que ti!) enviou unha solicitude de contrasinal esquecido para a tua conta en {forum}.
 
-        If this was you, click the following link to reset your password:
+        Se fuches ti, preme a seguinte ligazón para redefinir o teu contrasinal:
         {url}
 
-        If you do not wish to change your password, just ignore this email and nothing will happen.
+        Se non querías mudar o teu contrasinal, ignora este email e non acontecerá nada.
 
   ##
   # REUSED TRANSLATIONS - These keys should not be used directly in code!
@@ -506,36 +506,36 @@ core:
 
   # Translations in this namespace are referenced by two or more unique keys.
   ref:
-    all_discussions: All Discussions
-    change_email: Change Email
-    change_password: Change Password
-    confirm_password: Confirm Password
-    confirmation_email_sent: "We've sent a confirmation email to {email}. If it doesn't arrive soon, check your spam folder."
-    delete: Delete
-    delete_forever: Delete Forever
-    discussions: Discussions
-    edit: Edit
+    all_discussions: Todas as discusións
+    change_email: Mudar email
+    change_password: Mudar contrasinal
+    confirm_password: Confirmar contrasinal
+    confirmation_email_sent: "Foi enviado un email de confirmación a {email}. Se non chega cedo, comproba a carpeta de spam."
+    delete: Borrar
+    delete_forever: Borrar para sempre
+    discussions: Discusións
+    edit: Editar
     email: Email
-    load_more: Load More
-    log_in: Log In
-    log_out: Log Out
-    mark_all_as_read: Mark All as Read
-    next_page: Next Page
-    notifications: Notifications
+    load_more: Cargar máis
+    log_in: Acceder
+    log_out: Fechar sesión
+    mark_all_as_read: Marcar todo como lido
+    next_page: Seguinte páxina
+    notifications: Notificacións
     okay: OK                                     # Referenced by flarum-tags.yml
-    password: Password
-    rename: Rename
-    reply: Reply                                 # Referenced by flarum-mentions.yml
-    reset_your_password: Reset Your Password
-    restore: Restore
-    save_changes: Save Changes                   # Referenced by flarum-suspend.yml, flarum-tags.yml
-    settings: Settings
-    sign_up: Sign Up
-    some_others: "{count} other|{count} others"  # Referenced by flarum-likes.yml, flarum-mentions.yml
-    start_a_discussion: Start a Discussion
-    username: Username
-    write_a_reply: Write a Reply...
-    you: You                                     # Referenced by flarum-likes.yml, flarum-mentions.yml
+    password: Contrasinal
+    rename: Renomear
+    reply: Responder                                 # Referenced by flarum-mentions.yml
+    reset_your_password: Redefinir o teu contrasinal
+    restore: Restaurar
+    save_changes: Gardar cambios                 # Referenced by flarum-suspend.yml, flarum-tags.yml
+    settings: Preferencias
+    sign_up: Rexistrarse
+    some_others: "{count} outro|{count} outros"  # Referenced by flarum-likes.yml, flarum-mentions.yml
+    start_a_discussion: Comezar unha discusión
+    username: Nome de usuario
+    write_a_reply: Escribir unha resposta...
+    you: Ti                                     # Referenced by flarum-likes.yml, flarum-mentions.yml
 
   ##
   # GROUP NAMES - These keys are translated at the back end.
@@ -545,9 +545,9 @@ core:
   group:
     admin: Admin
     admins: Admins
-    guest: Guest
-    guests: Guests
-    member: Member
-    members: Members
+    guest: Convidado
+    guests: Convicados
+    member: Membro
+    members: Membros
     mod: Mod
     mods: Mods
