--- a/locale/validation.yml
+++ b/locale/validation.yml
@@ -1,82 +1,82 @@
 validation:
-  accepted: "The :attribute must be accepted."
-  active_url: "The :attribute is not a valid URL."
-  after: "The :attribute must be a date after :date."
-  after_or_equal: "The :attribute must be a date after or equal to :date."
-  alpha: "The :attribute may only contain letters."
-  alpha_dash: "The :attribute may only contain letters, numbers, and dashes."
-  alpha_num: "The :attribute may only contain letters and numbers."
-  array: "The :attribute must be an array."
-  before: "The :attribute must be a date before :date."
-  before_or_equal: "The :attribute must be a date before or equal to :date."
+  accepted: ":attribute debe ser aceptado."
+  active_url: ":attribute non é unha URL válida."
+  after: "A :attribute debe ser unha data despois do :date."
+  after_or_equal: "A :attribute debe ser unha data despois ou igual ao :date."
+  alpha: ":attribute só pode conter letras."
+  alpha_dash: ":attribute só pode conter letras, números e guións."
+  alpha_num: ":attribute só pode conter letras e números."
+  array: ":attribute debe ser un array."
+  before: "A :attribute debe ser unha data antes do :date."
+  before_or_equal: "A :attribute debe ser unha data antes ou igual ao :date."
   between:
-    numeric: "The :attribute must be between :min and :max."
-    file: "The :attribute must be between :min and :max kilobytes."
-    string: "The :attribute must be between :min and :max characters."
-    array: "The :attribute must have between :min and :max items."
-  boolean: "The :attribute field must be true or false."
-  confirmed: "The :attribute confirmation does not match."
-  date: "The :attribute is not a valid date."
-  date_format: "The :attribute does not match the format :other."
-  different: "The :attribute and :other must be different."
-  digits: "The :attribute must be :digits digits."
-  digits_between: "The :attribute must be between :min and :max digits."
-  dimensions: "The :attribute has invalid image dimensions."
-  distinct: "The :attribute field has a duplicate value."
-  email: "The :attribute must be a valid email address."
-  exists: "The selected :attribute is invalid."
-  file: "The :attribute must be a file."
-  filled: "The :attribute field must have a value."
-  image: "The :attribute must be an image."
-  in: "The selected :attribute is invalid."
-  in_array: "The :attribute field does not exist in :other."
-  integer: "The :attribute must be an integer."
-  ip: "The :attribute must be a valid IP address."
-  ipv4: "The :attribute must be a valid IPv4 address."
-  ipv6: "The :attribute must be a valid IPv6 address."
-  json: "The :attribute must be a valid JSON string."
+    numeric: ":attribute debe estar entre :min e :max."
+    file: ":attribute debe estar entre :min e :max kilobytes."
+    string: ":attribute debe estar entre :min e :max caracteres."
+    array: ":attribute debe ter entre :min e :max elementos."
+  boolean: ":attribute debe ser verdadeiro ou falso."
+  confirmed: "A confirmación de :attribute non coincide."
+  date: "A :attribute non é unha data válida."
+  date_format: ":attribute non coincide co formato :other."
+  different: ":attribute e :other deben ser diferentes."
+  digits: ":attribute debe ter :digits díxitos."
+  digits_between: ":attribute debe ter entre :min e :max díxitos."
+  dimensions: ":attribute ten unhas dimensións de imaxe inválidas."
+  distinct: ":attribute ten un valor ducplicado."
+  email: ":attribute debe ser un enderezo de email válido."
+  exists: "O valor seleccionado para :attribute é inválido."
+  file: ":attribute debe ser un arquivo."
+  filled: ":attribute debe ter un valor."
+  image: ":attribute debe ser unha imaxe."
+  in: "O valor seleccionado para :attribute é inválido."
+  in_array: ":attribute non existe en :other."
+  integer: ":attribute debe ser un número enteiro."
+  ip: ":attribute debe ser un enderezo IP válido."
+  ipv4: ":attribute debe ser un enderezo IPv4 válido."
+  ipv6: ":attribute debe ser un enderezo IPv6 válido."
+  json: ":attribute debe ser unha cadea JSON válida."
   max:
-    numeric: "The :attribute may not be greater than :max."
-    file: "The :attribute may not be greater than :max kilobytes."
-    string: "The :attribute may not be greater than :max characters."
-    array: "The :attribute may not have more than :max items."
-  mimes: "The :attribute must be a file of type: :values."
-  mimetypes: "The :attribute must be a file of type: :values."
+    numeric: ":attribute non pode ser maior que :max."
+    file: ":attribute non pode ter máis de :max kilobytes."
+    string: ":attribute non pode ter máis de :max caracteres."
+    array: ":attribute non pode ter máis de :max elementos."
+  mimes: ":attribute debe ser un arquivo de tipo: :values."
+  mimetypes: ":attribute deve ser un arquivo de tipo: :values."
   min:
-    numeric: "The :attribute must be at least :min."
-    file: "The :attribute must be at least :min kilobytes."
-    string: "The :attribute must be at least :min characters."
-    array: "The :attribute must have at least :min items."
-  not_in: "The selected :attribute is invalid."
-  numeric: "The :attribute must be a number."
-  present: "The :attribute field must be present."
-  regex: "The :attribute format is invalid."
-  required: "The :attribute field is required."
-  required_if: "The :attribute field is required when :other is :value."
-  required_unless: "The :attribute field is required unless :other is in :values."
-  required_with: "The :attribute field is required when :values is present."
-  required_with_all: "The :attribute field is required when :values is present."
-  required_without: "The :attribute field is required when :values is not present."
-  required_without_all: "The :attribute field is required when none of :values are present."
-  same: "The :attribute and :other must match."
+    numeric: ":attribute debe ser polo menos :min."
+    file: ":attribute debe ter polo menos :min kilobytes."
+    string: ":attribute debe ter polo menos :min caracteres."
+    array: ":attribute debe ter polo menos :min elementos."
+  not_in: "O valor seleccionado para :attribute é inválido."
+  numeric: ":attribute debe ser un número."
+  present: ":attribute debe estar presente."
+  regex: "O formato de :attribute é inválido."
+  required: "O campo :attribute é obrigatorio."
+  required_if: "O campo :attribute é obrigatorio cando :other é :value."
+  required_unless: "O campo :attribute é obrigatorio a non ser que :other sexa :values."
+  required_with: "O campo :attribute é obrigatorio cando :values está presente."
+  required_with_all: "O campo :attribute é obrigatorio cando :values está presente."
+  required_without: "O campo :attribute é obrigatorio cando :values non está presente."
+  required_without_all: "O campo :attribute é obrigatorio cando ningún entre :values están presentes."
+  same: ":attribute e :other deben coincidir."
   size:
-    numeric: "The :attribute must be :size."
-    file: "The :attribute must be :size kilobytes."
-    string: "The :attribute must be :size characters."
-    array: "The :attribute must contain :size items."
-  string: "The :attribute must be a string."
-  timezone: "The :attribute must be a valid zone."
-  unique: "The :attribute has already been taken."
-  uploaded: "The :attribute failed to upload."
-  url: "The :attribute format is invalid."
+    numeric: ":attribute debe ser :size."
+    file: ":attribute debe ter :size kilobytes."
+    string: ":attribute debe ter :size caracteres."
+    array: ":attribute debe conter :size elementos."
+  string: ":attribute ten que ser unha cadea de texto."
+  timezone: ":attribute debe ser unha zona válida."
+  unique: ":attribute xa está collido."
+  uploaded: "Fallo ao subir :attribute."
+  url: "O formato de :attribute é inválido."
 
   attributes:
-    username: username
-    password: password
+    username: nome de usuario
+    password: contrasinal
     email: email
-    title: title
-    content: content
-    name_singular: singular name
-    name_plural: plural name
-    tag_count_primary: number of primary tags
-    tag_count_secondary: number of secondary tags
+    title: título
+    content: contido
+    name_singular: nome en singular
+    name_plural: nome en plural
+    tag_count_primary: número de etiquetas pimarias
+    tag_count_secondary: número de etiquetas secundarias
