--- a/locale/flarum-mentions.yml
+++ b/locale/flarum-mentions.yml
@@ -9,28 +9,28 @@ flarum-mentions:
 
     # These translations are used by the composer (reply autocompletion function).
     composer:
-      reply_to_post_text: "Reply to #{number}"
+      reply_to_post_text: "Responder a #{number}"
 
     # These translations are used by the Notifications dropdown, a.k.a. "the bell".
     notifications:
       others_text: => core.ref.some_others
-      post_mentioned_text: "{username} replied to your post"  # Can be pluralized to agree with the number of users!
-      user_mentioned_text: "{username} mentioned you"
+      post_mentioned_text: "{username} respondeu á tua publicación"  # Can be pluralized to agree with the number of users!
+      user_mentioned_text: "{username} mencionoute"
 
     # These translations are displayed beneath individual posts.
     post:
-      mentioned_by_self_text: "{users} replied to this."  # Can be pluralized to agree with the number of users!
-      mentioned_by_text: "{users} replied to this."       # Can be pluralized to agree with the number of users!
+      mentioned_by_self_text: "{users} respondiche a isto.|{users} respondíchedes a isto."  # Can be pluralized to agree with the number of users!
+      mentioned_by_text: "{users} respondeu a isto.|{users} responderon a isto."       # Can be pluralized to agree with the number of users!
       others_text: => core.ref.some_others
-      quote_button: Quote
+      quote_button: Citar
       reply_link: => core.ref.reply
       you_text: => core.ref.you
 
     # These translations are used in the Settings page.
     settings:
-      notify_post_mentioned_label: Someone replies to one of my posts
-      notify_user_mentioned_label: Someone mentions me in a post
+      notify_post_mentioned_label: Alguén responde a unha das miñas publicacións
+      notify_user_mentioned_label: Alguén me menciona nunha publicación
 
     # These translations are used in the user profile page and profile popup.
     user:
-      mentions_link: Mentions
+      mentions_link: Mencións
