--- a/locale/flarum-tags.yml
+++ b/locale/flarum-tags.yml
@@ -13,11 +13,11 @@ flarum-tags:
 
     # These translations are used in the Edit Tag modal dialog.
     edit_tag:
-      color_label: Color
-      delete_tag_button: Delete Tag
-      delete_tag_confirmation: "Are you sure you want to delete this tag? The tag's discussions will NOT be deleted."
-      description_label: Description
-      hide_label: Hide from All Discussions
+      color_label: Cor
+      delete_tag_button: Borrar etiqueta
+      delete_tag_confirmation: "Tes a certeza de querer eliminar esta etiqueta? As discusións da etiqueta NON serán borradas."
+      description_label: Descrición
+      hide_label: Esconder de todas as discusións
       name_label: => flarum-tags.ref.name
       name_placeholder: => flarum-tags.ref.name
       slug_label: Slug
@@ -27,68 +27,68 @@ flarum-tags:
     # These translations are used in the navigation bar.
     nav:
       tags_button: => flarum-tags.ref.tags
-      tags_text: Manage the list of tags available to organise discussions with.
+      tags_text: Administrar a lista de tags disponíbeis para organizar discusións.
 
     # These translations are used in the Permissions page of the admin interface.
     permissions:
-      allow_edit_tags_label: Allow tag editing
-      restrict_by_tag_heading: Restrict by Tag
-      tag_discussions_label: Tag discussions
+      allow_edit_tags_label: Permitir a edición de etiquetas
+      restrict_by_tag_heading: Restrinxir por etiqueta
+      tag_discussions_label: Discusión da etiqueta
 
     # These translations are used in the Tag Settings modal dialog.
     tag_settings:
-      range_separator_text: " to "
-      required_primary_heading: Required Number of Primary Tags
-      required_primary_text: Enter the minimum and maximum number of primary tags that may be applied to a discussion.
-      required_secondary_heading: Required Number of Secondary Tags
-      required_secondary_text: Enter the minimum and maximum number of secondary tags that may be applied to a discussion.
-      title: Tag Settings
+      range_separator_text: " a "
+      required_primary_heading: Número requerido de etiquetas primarias
+      required_primary_text: Introduce o número mínimo e máximo de etiquetas primarias que poden ser aplicadas a unha discusión.
+      required_secondary_heading: Número requerido de etiquetas secundarias
+      required_secondary_text: Introduce o número mínimo e máximo de etiquetas secundarias que poden ser aplicadas a unha discusión.
+      title: Configuración de etiquetas
 
     # These translations are used in the Tags page.
     tags:
-      about_tags_text: "Tags are used to categorize discussions. Primary tags are like traditional forum categories: they can be arranged in a two-level hierarchy. Secondary tags do not have hierarchy or order, and are useful for micro-categorization."
+      about_tags_text: "As etiquetas son utilizadas para organizar as discusiíns. As etiquetas primarias son como as tradicionais categorías dun foro: poden ser organizadas nunha xerarquía de dous niveis. As etiquetas secundarias non teñen unha orde xerárquica e son útiles para a micro-categorización."
       create_tag_button: => flarum-tags.ref.create_tag
-      primary_heading: Primary Tags
-      secondary_heading: Secondary Tags
-      settings_button: Settings
+      primary_heading: Etiquetas primarias
+      secondary_heading: Etiquetas secundarias
+      settings_button: Configuración
 
   # Translations in this namespace are used by the forum user interface.
   forum:
 
     # These translations are used by the Choose Tags modal dialog.
     choose_tags:
-      choose_primary_placeholder: "Choose a primary tag|Choose {count} primary tags"
-      choose_secondary_placeholder: "Choose 1 more tag|Choose {count} more tags"
-      edit_title: "Edit Tags for {title}"
+      choose_primary_placeholder: "Escolle unha etiqueta primaria|Escolle {count} etiquetas primarias"
+      choose_secondary_placeholder: "Escolle unha etiqueta máis|Escolle {count} etiquetas máis"
+      edit_title: "Editar as etiquetas de {title}"
       submit_button: => core.ref.okay
-      title: Choose Tags for Your Discussion
+      title: Escolle as etiquetas para a tua discusión
 
     # These translations are used by the composer when starting a discussion.
     composer_discussion:
-      choose_tags_link: Choose Tags
+      choose_tags_link: Escoller etiquetas
 
     # These translations are used by the discussion control buttons.
     discussion_controls:
-      edit_tags_button: Edit Tags
+      edit_tags_button: Editar etiquetas
 
     # These translations are used on the index page, peripheral to the discussion list.
     index:
-      more_link: More...
+      more_link: Máis...
       tags_link: => flarum-tags.ref.tags
-      untagged_link: Untagged
+      untagged_link: Sen etiquetar
 
     # These translations are displayed between posts in the post stream.
     post_stream:
-      added_tags_text: "{username} added the {tagsAdded}."
-      added_and_removed_tags_text: "{username} added the {tagsAdded} and removed the {tagsRemoved}."
-      removed_tags_text: "{username} removed the {tagsRemoved}."
-      tags_text: "{tags} tag|{tags} tags"
+      added_tags_text: "{username} engadiu a {tagsAdded}."
+      added_and_removed_tags_text: "{username} engadiu a {tagsAdded} e eliminou a {tagsRemoved}."
+      removed_tags_text: "{username} eliminou a {tagsRemoved}."
+      tags_text: "{tags} etiqueta|{tags} etiquetas"
 
   # Translations in this namespace are used by the forum and admin interfaces.
   lib:
 
     # This translation is displayed in place of the name of a tag that's been deleted.
-    deleted_tag_text: Deleted
+    deleted_tag_text: Borrada
 
   ##
   # REUSED TRANSLATIONS - These keys should not be used directly in code!
@@ -96,6 +96,6 @@ flarum-tags:
 
   # Translations in this namespace are referenced by two or more unique keys.
   ref:
-    create_tag: Create Tag
-    name: Name
-    tags: Tags
+    create_tag: Crear etiqueta
+    name: Nome
+    tags: Etiquetas
