--- a/locale/flarum-flags.yml
+++ b/locale/flarum-flags.yml
@@ -27,7 +27,7 @@ flarum-flags:
       reason_inappropriate_label: Inapropiado
       reason_inappropriate_text: "Esta publicación é ofensiva, abusiva, ou viola as <a>Normas da Comunidade</a>."
       reason_off_topic_label: "Off-topic"
-      reason_off_topic_text: Esta publicación non é relevante para a discusión actual e debe ser movido a outro sitio.
+      reason_off_topic_text: Esta publicación non é relevante para a conversa actual e debe ser movido a outro sitio.
       reason_other_label: Outro
       reason_spam_label: Spam
       reason_spam_text: Este post é un anuncio comercial.
